# aml

./: .checkpatch.conf  .clang-format  .ecp-ci.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .licenserc.yml  .readthedocs.yml  .repoquality  .valgrind.supp  AUTHORS  CONTRIBUTING.markdown  DESIGN.markdown  Makefile.am  README.markdown  TODO-MPI-NOTES  aml.pc.in  autogen.sh  configure.ac  default.nix  o2lo.in  readthedoc.yml  release.sh  shell.nix
benchmarks/: Makefile.am  README.md  bench_mkl.rb  bench_script.rb  bench_script_blocked.rb  blas_l1_kernel.c  blas_l1_kernel.h  blas_l2_kernel.c  blas_l2_kernel.h  cholesky_mkl.c  cholesky_noprefetch.c  cholesky_prefetch.c  dgemm_cblas.c  dgemm_mkl.c  dgemm_noprefetch.c  dgemm_noprefetch_gemm128.c  dgemm_noprefetch_gemm128_task.c  dgemm_noprefetch_gemm256_cblas_task.c  dgemm_noprefetch_gemm256_task.c  dgemm_noprefetch_gemm320_cblas_task.c  dgemm_noprefetch_gemm320_task.c  dgemm_noprefetch_gemm384_cblas_task.c  dgemm_noprefetch_gemm384_task.c  dgemm_noprefetch_gemm448_cblas_task.c  dgemm_noprefetch_gemm448_task.c  dgemm_noprefetch_gemm512_cblas_task.c  dgemm_noprefetch_gemm512_task.c  dgemm_noprefetch_task.c  dgemm_noprefetch_tiled_c.c  dgemm_prefetch.c  dgemm_prefetch_blocked.c  dgemm_prefetch_c_tiled.c  dgemm_vanilla.c  run.sh  stream_add_omp.c  stream_add_omp_mt.c  stream_add_omp_st.c  stream_add_pth_st.c  stream_vanilla.c  testBandwidth.c  (+6 more)
benchmarks/allocator/: allocator.c  allocator.h  benchmark_area.c  benchmark_buddy.c  benchmark_sized.c
benchmarks/blas/: flat_l1.c  l1_kernel.c  tiled_l1.c  verify_l1.c  verify_l1.h
benchmarks/boast/: KNL-DGEMM2.rb
benchmarks/noprefetch/: flat_blas_l1.c  flat_blas_l2.c  tiled_blas_l1.c
benchmarks/results/: results_block_screening.yaml  results_blocked.yaml  results_mkl.yaml
benchmarks/scripts/: matrix-split-optimal-blocks.rb  optimal-block-sizes.rb  perf_dgemm.gnu  perf_dgemm_block.gnu  results-analysis.rb
doc/: Makefile.am  aml.doxy  conf.py  contents.rst  index.rst  requirements.txt
doc/_static/: custom.css
doc/md/: main.md
doc/pages/: area_cuda_api.rst  area_hip_api.rst  area_linux_api.rst  area_opencl_api.rst  area_ze_api.rst  areas.rst  dma_cuda_api.rst  dma_hip_api.rst  dma_linux_api.rst  dma_linux_par_api.rst  dma_linux_seq_api.rst  dma_ze_api.rst  dmas.rst  layout.rst  layout_dense.rst  layout_native.rst  scratch_par_api.rst  scratch_seq_api.rst  scratchs.rst  tiling_1d_api.rst  tiling_2d_api.rst  tiling_pad_api.rst  tiling_resize_api.rst  tilings.rst
doc/tutorials/: Makefile.am  getting_started.rst  tutorials.rst
include/: Makefile.am  aml.h
include/internal/: uthash.h
src/: Makefile.am  allocator.c  allocator.h  aml-copy.h  aml-dma-layout.h  aml-layout-dense.h  aml-layout-pad.h  aml-layout-reshape.h  aml-layout.h  aml-tiling-collapse.h  aml-tiling-pad.h  aml-tiling-resize.h  aml-tiling.h  aml.c  aml.h  area.c  area_linux.c  area_linux_manager.c  area_linux_mbind.c  area_linux_mmap.c  area_posix.c  area_system.c  arena.c  arena_jemalloc.c  binding.c  binding_interleave.c  binding_single.c  citerators.c  citerators.h  copy.c  copy.rb  copy_nd.c  dma.c  dma_layout.c  dma_linux_par.c  dma_linux_seq.c  layout.c  layout_dense.c  layout_pad.c  layout_reshape.c  (+13 more)
src/allocator/: allocator.c  area.c  buddy.c  freelist.c  sized.c  utils.c
src/area/: Makefile.am  area.c  area_linux.c  area_linux_manager.c  area_linux_mbind.c  area_linux_mmap.c  area_posix.c  cuda.c  hip.c  host.c  hwloc.c  linux.c  mpi.c  opencl.c  ze.c
src/arena/: Makefile.am  arena.c  arena_jemalloc.c
src/backend/: hwloc.c  linux.c  mpi.c  ze.c
src/binding/: Makefile.am  binding.c  binding_interleave.c  binding_single.c
src/dma/: Makefile.am  cuda.c  dma.c  dma_linux_par.c  dma_linux_seq.c  dma_linux_spin.c  hip.c  linux.c  multiplex.c  ze.c
src/higher/: mapper-creator.c  mapper-deepcopy.c  mapper-replicaset.c  mapper-visitor.c  mapper.c
src/layout/: cuda.c  dense.c  layout.c  pad.c  reshape.c  sparse.c  transform.c
src/mpi/: Makefile.am  area.c
src/replicaset/: hwloc.c  replicaset.c
src/scratch/: Makefile.am  scratch.c  scratch_double.c  scratch_par.c  scratch_seq.c
src/tiling/: Makefile.am  tiling.c  tiling_1d.c  tiling_2d.c  tiling_pad.c  tiling_resize.c
src/utils/: Makefile.am  array.c  async.c  bitmap.c  error.c  features.c  hwloc.c  linux.c  queue.c  tree.c  vector.c  ze.c
tests/: 16_8_4_Threads.sh  MMBuildIcc.sh  MMTile.sh  Makefile  Makefile.am  area.c  area_linux.c  area_posix.c  arena.c  arena_jemalloc.c  argo_matrix_multiply.c  binding.c  citerators.c  copy.c  copy_nd.c  dgemm_tiling_noprefetch.c  dgemm_tiling_prefetch.c  dgemm_tiling_prefetch_omp.c  dma_layout.c  dma_linux_par.c  dma_linux_seq.c  iccENV.sh  intel_matrix_multiply.c  layout.c  linux_manager.c  linux_mbind.c  linux_mmap.c  makefile.output  matrix_multiply_omp.c  matrix_multiply_omp_tile.c  scratch_par.c  scratch_seq.c  stream_add.c  stream_add_omp.c  stream_add_omp_mt.c  stream_add_omp_st.c  stream_add_pth.c  stream_add_pth_st.c  stream_vanilla.c  tiled_matrix_multiply.c  (+4 more)
tests/allocator/: dummy_area.c  dummy_area.h  memset.c  memset.h  test_allocator.c  test_allocator.h  test_allocator_chunk.c  test_area.c  test_buddy.c  test_sized.c  test_utils.c
tests/area/: test_area.c  test_cuda.c  test_hip.c  test_hwloc.c  test_linux.c  test_manager.c  test_mbind.c  test_mmap.c  test_mpi.c  test_opencl.c  test_posix.c  test_ze.c
tests/arena/: test_jemalloc.c
tests/binding/: test_binding.c
tests/dma/: test-aml-dma-omp.c  test-aml-dma-ze.c  test_cuda.c  test_dma.c  test_dma.h  test_dma_linux_par.c  test_dma_linux_seq.c  test_dma_linux_spin.c  test_hip.c  test_linux.c  test_multiplex.c  test_sparse.c  test_ze.c
tests/higher/: test_mapper-creator.c  test_mapper-deepcopy.c  test_mapper-replicaset.c  test_mapper-visitor.c  test_mapper.c
tests/layout/: coords.c  dense.c  layout.c  reshape.c  test_coords.c  test_dense.c  test_layout.c  test_layout.h  test_pad.c  test_reshape.c  test_sparse.c  test_transform.c
tests/mpi/: Makefile.am  test_area.c
tests/replicaset/: common.c  test_hwloc.c  test_replicaset.c  (+1 more)
(+132 files in other folders)
